# Location-Privacy-ETSi

./: .gitignore  README.md
location-privacy-etsi/attacker/: Attacker README.md  Cargo.toml  Rust Implementation README.md  attack_advanced.py  attack_genetic.py  ingolstadt_75_2_attacker.xml  pyproject.toml  simulated-times-ingolstadt.xml  simulated-times_ingolstadt.xml  simulated-times_spider.xml  spider_50_2_attacker.xml
location-privacy-etsi/attacker/attacks/: attacker_advanced.xml
location-privacy-etsi/attacker/reports/: report.txt
location-privacy-etsi/attacker/src/: lib.rs  types.rs
location-privacy-etsi/attacker/src/fitness/: mod.rs  trip.rs  wallet.rs
location-privacy-etsi/attacker/src/ga/: crossover.rs  evolution.rs  mod.rs  mutation.rs  population.rs
location-privacy-etsi/attacker/sumo/: ingolstadt_200_1_attacker.xml  ingolstadt_200_1_challenger.xml  simulated-times_spider.xml
location-privacy-etsi/attacker/sumo/alte agents/: ingolstadt_50_1_attacker.xml  ingolstadt_50_1_challenger.xml  ingolstadt_75_2_challenger.xml
location-privacy-etsi/attacker/sumo/ingolstadt/: ingolstadt_100_1_attacker.xml  ingolstadt_100_1_challenger.xml  ingolstadt_150_1_attacker.xml  ingolstadt_200_1_challenger.xml  ingolstadt_25_1_challenger.xml  ingolstadt_50_1_attacker.xml  ingolstadt_50_1_challenger.xml  ingolstadt_75_1_attacker.xml  ingolstadt_75_1_challenger.xml
location-privacy-etsi/attacker/sumo/neue agents/: ingolstadt_100_3_attacker.xml  ingolstadt_100_3_challenger.xml  spider_50_2_challenger.xml
location-privacy-etsi/attacker/utils/: simulateTime.py
(+102 files in other folders)
